<resources>
    <string name="app_name">Navigation Component Test App</string>
    <string name="green_box">Green box</string>
    <string name="yellow_box">Yellow box</string>
    <string name="this_is_a_box">This is a box</string>
    <string name="go_back">Go back</string>
    <string name="generate_number">Generate number</string>
    <string name="open_secret">Open Secret</string>
    <string name="this_is_a_secret_place">This is a secret place.</string>
    <string name="close_the_whole_box">Close the whole box</string>

    <string name="generated_number">Generated number: %1$d</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="root">Root</string>
    <string name="secret">Secret</string>
    <string name="box_title">{colorName} Box</string>
</resources>