<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.navigationcomponenttestapp.BoxFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@color/white">

    <TextView
        android:id="@+id/valueTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/this_is_a_box"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="160dp"/>

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintTop_toBottomOf="@id/valueTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <Button
        android:id="@+id/openSecretButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_secret"
        app:layout_constraintTop_toBottomOf="@id/goBackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <Button
        android:id="@+id/generateNumberButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_number"
        app:layout_constraintTop_toBottomOf="@id/openSecretButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>